src/components/Footer/Footer.scss
@import "/src/sass/mixins.scss";
@import "/src/sass/variables.scss";
@import "/src/sass/colors.scss";

.footer {
  margin-top: 20px;

  ul {
    list-style-type: none;
  }

  .footer-sign-in {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 20px 0 20px;
    margin-bottom: 20px;
    border-top: 1px solid #ddd;
    border-bottom: 1px solid #ddd;

    li {
      font-size: $font-size-13px;
    }

    .footer-sign-in-button {
      padding: 7px 90px 7px 90px;
      margin: 5px 0 5px;
      border-radius: 5px;
      border: 1px solid #fab700;
      background-color: $primary-button-color;
      font-size: 12px;
      font-weight: bold;
      cursor: pointer;
    }

    .footer-sign-in-button:hover {
      background-color: $primary-button-hover-color;
    }

    .new-customer {
      font-size: 11px;

      a {
        color: $secondary-link-text-color;
        text-decoration: none;
      }

      a:hover {
        @include linkHoverEffect;
      }
    }
  }

  .back-to-top {
    height: 49px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #37475a;
    color: #ffffff;
    font-size: $font-size-13px;
    cursor: pointer;
  }

  .back-to-top:hover {
    background-color: #485769;
  }

  .footer-main-grid-container {
    padding: 40px 0;
    background-color: #232f3e;
    border-bottom: 1px solid #3a4553;

    a {
      text-decoration: none;
    }

    .footer-main-grid {
      display: grid;
      width: 1014px;
      margin: 0 auto;
      grid-template-columns: 1fr 1fr 1fr 1fr;

      .footer-grid-item {
        width: 78%;

        h4 {
          font-size: $font-size-16px;
          color: #ffffff;
        }

        a {
          display: flex;
          margin-top: 10px;
          font-size: $font-size-14px;
          color: #dddddd;
          cursor: pointer;
        }

        a:hover {
          text-decoration: underline;
        }
      }
    }
  }

  .amazon-currency-container {
    padding: 40px 0;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #232f3e;
    color: #cccccc;

    .amazon-currency {
      width: 50%;
      display: flex;
      justify-content: space-between;
      align-items: center;
      padding: 0 40px;

      img {
        width: 80px;
      }

      ul {
        display: flex;
        cursor: pointer;

        li {
          display: flex;
          align-items: center;
          padding: 5px 10px;
          margin-right: 8px;
          border: 1px solid #cccccc;
          border-radius: 4px;
          font-size: $font-size-13px;

          img {
            max-width: 13%;
            height: 15px;
            margin-right: 5px;
          }
        }
      }
    }
  }

  .footer-secondary-grid-container {
    display: flex;
    justify-content: center;
    padding: 40px 0;
    background-color: #131a22;
    font-size: $font-size-12px;

    .footer-secondary-grid {
      width: 1200px;
      display: grid;
      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
      row-gap: 40px;

      .footer-secondary-grid-item {
        width: 100px;

        h6 {
          font-size: $font-size-12px;
          color: #dddddd;
        }

        p {
          color: #999999;
        }
      }
    }
  }
}

